Updates in pom.xml. Some fixes.